--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <mybatis-plus.version>3.5.3.1</mybatis-plus.version>
         <hutool.verison>5.8.18</hutool.verison>
         <openapi.version>2.0.4</openapi.version>
+        <redisson.version>3.20.0</redisson.version>
     </properties>
 
     <dependencies>
@@ -52,6 +53,12 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>${mybatis-plus.version}</version>
+        </dependency>
+        <!-- redisson -->
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>${redisson.version}</version>
         </dependency>
         <!-- lombok -->
         <dependency>
