--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,10 +3,12 @@ server:
 spring:
   application:
     name: yellowpage
+  #--------------------连接MySQL基本信息-------------------
   datasource:
     url: jdbc:mysql://localhost:3306/hmdp?useSSL=false&serverTimezone=UTC
     username: root
     password: 1234
+  #--------------------连接Redis的基本信息-------------------
   data:
     redis:
       host: 127.0.0.1
@@ -20,6 +22,13 @@ spring:
           time-between-eviction-runs: 10s
   jackson:
     default-property-inclusion: non_null # JSON处理时忽略非空字段
+  #--------------------配置RabbitMQ服务的基本信息-------------------
+  rabbitmq:
+    host: 127.0.0.1
+    port: 5672
+    username: admin
+    password: 1234
+    virtual-host: /hua
 mybatis-plus:
   type-aliases-package: com.example.entity # 别名扫描包
 logging:
